Started adding Mission view